# image_process_workflow

./: .gitignore  Dockerfile.backend  README.md  docker-compose.yml  pyproject.toml  start.sh
app/: main.py
app/core/: code_generator.py  workflow.py
app/core/nodes/: base.py  concat.py  data.py  draw.py  geometry.py  image_input.py  image_process.py  morphology.py  registry.py  script.py  viewer.py
app/models/: __init__.py  run.py  workflow.py
app/routers/: export.py  nodes.py  runs.py  upload.py  workflows.py
app/services/: __init__.py  storage.py
app/utils/: image.py
docs/: API.md  NODE_DEVELOPMENT.md  QUICKSTART.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: CustomNode.css  CustomNode.tsx  NodePalette.css  NodePalette.tsx  PropertyPanel.css  PropertyPanel.tsx  Toolbar.css  Toolbar.tsx  WorkflowCanvas.tsx
frontend/src/store/: workflowStore.ts
tests/: test_nodes.py  test_workflow.py
